syntax = "proto3";


package helloWorld;
option go_package=".;proto";

import "google/api/annotations.proto";


service Greeter{
  rpc SayHello(HelloRequest) returns (HelloReply) {
    option (google.api.http) = {
      get: "/v1/greeter/sayhello"
//      body: "*"
    };
  }
}

message HelloRequest{
  string name = 1;
}

message HelloReply{
  string message = 1;
}

//protoc -I ./proto --go_out ./proto/helloWorld --go-grpc_out ./proto/helloWorld --grpc-gateway_out ./proto/helloWorld proto/helloWorld/helloWorld.proto
